--- a/KHabit.xcodeproj/xcshareddata/xcschemes/KHabit Watch (Complication).xcscheme
+++ b/KHabit.xcodeproj/xcshareddata/xcschemes/KHabit Watch (Complication).xcscheme
@@ -55,10 +55,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "32">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/KHabit">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BED95F80251FB26B00F8CF2F"
@@ -66,7 +64,7 @@
             BlueprintName = "KHabit Watch"
             ReferencedContainer = "container:KHabit.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -75,10 +73,8 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "32">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/KHabit">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BED95F80251FB26B00F8CF2F"
@@ -86,16 +82,7 @@
             BlueprintName = "KHabit Watch"
             ReferencedContainer = "container:KHabit.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BED95F80251FB26B00F8CF2F"
-            BuildableName = "KHabit Watch.app"
-            BlueprintName = "KHabit Watch"
-            ReferencedContainer = "container:KHabit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
