--- a/KHabit.xcodeproj/xcshareddata/xcschemes/KHabit Watch.xcscheme
+++ b/KHabit.xcodeproj/xcshareddata/xcschemes/KHabit Watch.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/KHabit">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BED95F80251FB26B00F8CF2F"
@@ -65,7 +63,7 @@
             BlueprintName = "KHabit Watch"
             ReferencedContainer = "container:KHabit.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/KHabit">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BED95F80251FB26B00F8CF2F"
@@ -84,16 +80,7 @@
             BlueprintName = "KHabit Watch"
             ReferencedContainer = "container:KHabit.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BED95F80251FB26B00F8CF2F"
-            BuildableName = "KHabit Watch.app"
-            BlueprintName = "KHabit Watch"
-            ReferencedContainer = "container:KHabit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
